--- a/IWWRMP/Delete/index.html
+++ b/IWWRMP/Delete/index.html
@@ -326,7 +326,19 @@
 	
 </head>
 <body>
+<div id="google_translate_element"></div>
 
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({
+    pageLanguage: 'en',         // original language
+    includedLanguages: 'si,en', // Sinhala (si) and English (en) only
+    layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+  }, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>	
     <!-- Legend items will be dynamically added here -->
 </div>
     <!-- README Modal -->
