--- a/IWWRMP/Delete/index.html
+++ b/IWWRMP/Delete/index.html
@@ -258,7 +258,12 @@
             color: white;
         }
 
-		
+#google_translate_element {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 9999;
+}		
         #areaPieChart {
             width: 100%;
             height: 400px;
@@ -693,6 +698,18 @@ document.addEventListener("DOMContentLoaded", function () {
         }
     </script>
 
-		
+<div id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({
+    pageLanguage: 'en',         // original language
+    includedLanguages: 'si,en', // Sinhala (si) and English (en) only
+    layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+  }, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>		
 </body>
 </html>
