--- a/IWWRMP/Delete/index.html
+++ b/IWWRMP/Delete/index.html
@@ -320,7 +320,22 @@
 			 height: 100%;
             }
         }
-		
+	@media (max-width: 768px) {
+  header, footer {
+    font-size: 10px;
+    padding: 8px;
+  }
+
+  .button, .show-all-btn {
+    padding: 8px;
+    font-size: 11px;
+  }
+
+  #sidePanel {
+    padding: 10px;
+  }
+}
+	
     </style>
 	
 	
