--- a/IWWRMP/Delete/index.html
+++ b/IWWRMP/Delete/index.html
@@ -347,7 +347,7 @@
 function googleTranslateElementInit() {
   new google.translate.TranslateElement({
     pageLanguage: 'en',         // original language
-    includedLanguages: 'si,en', // Sinhala (si) and English (en) only
+    includedLanguages: 'si,ta,en', // Sinhala (si) and English (en) only
     layout: google.translate.TranslateElement.InlineLayout.SIMPLE
   }, 'google_translate_element');
 }
