--- a/IWWRMP/Delete/index.html
+++ b/IWWRMP/Delete/index.html
@@ -187,7 +187,8 @@
     top: 90px;                   /* Push down from the top (e.g., below header) */
     right: 200px;                    /* Align to the right edge */
     width: 200px;                /* Set width */
-    max-height: 80vh;            /* Prevent it from taking full screen height */
+    /*max-height: 80vh;            /* Prevent it from taking full screen height */
+    max-height: 300px;
     overflow-y: auto;            /* Scroll if content is long */
     background-color: white;     /* Background so it's readable */
     border: 1px solid #ccc;      /* Optional: subtle border */
