--- a/IWWRMP/Delete/index.html
+++ b/IWWRMP/Delete/index.html
@@ -53,12 +53,12 @@
   background-color: #e8f5e9; /* Light green background */
   color: #333;
   font-size: 12px;
-  padding: 5px 10px;
+  /*padding: 5px 10px;
   display: flex;
   justify-content: flex-end; /* Align translate element to right */
   align-items: center;
   border-bottom: 1px solid #c8e6c9;
-  height: 30px;
+  height: 10px;
 }
     
         .map {
