--- a/IWWRMP/Delete/index.html
+++ b/IWWRMP/Delete/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaflet Map with Dropdowns</title>
+    <title>UMW Watershed Management Plan</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 	    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
@@ -49,6 +49,18 @@
             background-color: #388e3c;
             padding: 10px;
         }
+	.top-bar {
+  background-color: #e8f5e9; /* Light green background */
+  color: #333;
+  font-size: 12px;
+  /*padding: 5px 10px;
+  display: flex;
+  justify-content: flex-end; /* Align translate element to right */
+  align-items: center;
+  border-bottom: 1px solid #c8e6c9;
+  height: 1px;
+}
+    
         .map {
             flex: 1;
             position: relative;
@@ -187,7 +199,8 @@
     top: 90px;                   /* Push down from the top (e.g., below header) */
     right: 200px;                    /* Align to the right edge */
     width: 200px;                /* Set width */
-    max-height: 80vh;            /* Prevent it from taking full screen height */
+    /*max-height: 80vh;            /* Prevent it from taking full screen height */
+    max-height: 300px;
     overflow-y: auto;            /* Scroll if content is long */
     background-color: white;     /* Background so it's readable */
     border: 1px solid #ccc;      /* Optional: subtle border */
@@ -257,13 +270,13 @@
             background-color: #4caf50;
             color: white;
         }
+
 #google_translate_element {
   position: fixed;
   top: 10px;
   right: 10px;
   z-index: 9999;
-}
-		
+}		
         #areaPieChart {
             width: 100%;
             height: 400px;
@@ -320,13 +333,43 @@
 			 height: 100%;
             }
         }
-		
+	@media (max-width: 768px) {
+  header, footer {
+    font-size: 10px;
+    padding: 8px;
+  }
+
+  .button, .show-all-btn {
+    padding: 8px;
+    font-size: 11px;
+  }
+
+  #sidePanel {
+    padding: 10px;
+  }
+}
+	
     </style>
 	
 	
 </head>
 <body>
+<div class="top-bar">
+  <div id="google_translate_element"></div>
+</div>
+	
 
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({
+    pageLanguage: 'en',         // original language
+    includedLanguages: 'si,ta,en', // Sinhala (si) and English (en) only
+    layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+  }, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>	
     <!-- Legend items will be dynamically added here -->
 </div>
     <!-- README Modal -->
@@ -397,19 +440,7 @@
         </div>
 
 
-<div id="google_translate_element"></div>
 
-<script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({
-    pageLanguage: 'en',         // original language
-    includedLanguages: 'si,en', // Sinhala (si) and English (en) only
-    layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-  }, 'google_translate_element');
-}
-</script>
-
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 		
     </header>
 	
@@ -709,6 +740,7 @@ document.addEventListener("DOMContentLoaded", function () {
             window.open("https://umw-dbms.github.io/MWSDataCatalog.html", "_blank");
         }
     </script>
-		
+
+	
 </body>
 </html>
