--- a/IWWRMP/Delete/index.html
+++ b/IWWRMP/Delete/index.html
@@ -354,9 +354,25 @@
 	
 </head>
 <body>
+<div class="top-bar">
+  <div id="google_translate_element"></div>
+</div>
+<script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement({
+      pageLanguage: 'en',
+      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+    }, 'google_translate_element');
+  }
+</script>
+
+<script type="text/javascript"
+        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+</script>
+
 
     <!-- Legend items will be dynamically added here -->
-</div>
+
     <!-- README Modal -->
     <div id="readme-modal" class="modal">
         <div class="modal-content">
