--- a/IWWRMP/Delete/index.html
+++ b/IWWRMP/Delete/index.html
@@ -52,13 +52,13 @@
 	.top-bar {
   background-color: #e8f5e9; /* Light green background */
   color: #333;
-  font-size: 12px;
+  font-size: 9px;
   /*padding: 5px 10px;
   display: flex;
   justify-content: flex-end; /* Align translate element to right */
   align-items: center;
   border-bottom: 1px solid #c8e6c9;
-  height: 30px;
+  height: 1px;
 }
     
         .map {
@@ -358,12 +358,14 @@
   <div id="google_translate_element"></div>
 </div>
 <script type="text/javascript">
-  function googleTranslateElementInit() {
-    new google.translate.TranslateElement({
-      pageLanguage: 'en',
-      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-    }, 'google_translate_element');
-  }
+
+ function googleTranslateElementInit() {
+  new google.translate.TranslateElement({
+    pageLanguage: 'en',         // original language
+    includedLanguages: 'si,ta,en', // Sinhala (si) and English (en) only
+    layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+  }, 'google_translate_element');
+} 
 </script>
 
 <script type="text/javascript"
