--- a/IWWRMP/Delete/index.html
+++ b/IWWRMP/Delete/index.html
@@ -55,7 +55,7 @@
   font-size: 9px;
   /*padding: 5px 10px;
   display: flex;
-  justify-content: flex-end; /* Align translate element to right */
+  /*justify-content: flex-end; /* Align translate element to right */
   align-items: center;
   border-bottom: 1px solid #c8e6c9;
   height: 1px;
