--- a/IWWRMP/Delete/index.html
+++ b/IWWRMP/Delete/index.html
@@ -53,9 +53,9 @@
   background-color: #e8f5e9; /* Light green background */
   color: #333;
   font-size: 9px;
-  /*padding: 5px 10px;
+  /*padding: 5px 10px;*/
   display: flex;
-  /*justify-content: flex-end; /* Align translate element to right */
+  /*justify-content: flex-end;*/ /* Align translate element to right */
   align-items: center;
   border-bottom: 1px solid #c8e6c9;
   height: 1px;
